--- a/amazon/amazon.html
+++ b/amazon/amazon.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>amazon.clone</title>
     <link rel="stylesheet" href="amazon.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <p>journey begins</p>
+   <header>
+        <div class="nav-bar">
+            <div class="nav-logo border">
+                <div class="logo">
+
+                </div>
+
+            </div>
+        </div>
+    </header>
 </body>
-</html>
+</html> 
