--- a/amazon/amazon.html
+++ b/amazon/amazon.html
@@ -47,17 +47,30 @@
             </div>
 
             <div class="nav-country border">
-                <div class="flag">
-                    <img src="Screenshot 2024-09-29 195623.png" alt="">
+                <div class="flah">
+                    <img clas="flag" src="Screenshot 2024-09-29 195623.png" alt="">
 
                 </div>
                 <div class="lang">
                     <select class="en">
-                        <option>
-                            EN
+                        <option class="ec">
+                            <h1>EN</h1>
                         </option>
                     </select>
                 </div>
+            </div>
+
+            <div class="nav-sign">
+                <p class="welcome">                                               
+                   Hello,sign in
+                </p> 
+            </div>
+            <div class="account">
+                <select class="sign_in">
+                    <option>
+                        <h1>Account &#38; Lists</h1>
+                    </option>
+                </select>
             </div>
             
         </div>
